2007-09-04  Antti Koivisto  <antti@apple.com>

        Reviewed by Maciej.
        
        Test for <rdar://problem/5452112>
        REGRESSION: Initially focused textfield on www.mac.com login page has no insertion point, and doesn't accept typed characters

        * fast/forms/focus-style-pending-expected.txt: Added.
        * fast/forms/focus-style-pending.html: Added.

2007-09-01  Darin Adler  <darin@apple.com>

        - rolled out the test case for 12988 until we re-fix it

        * fast/dom/duplicate-ids-document-order.html: Removed.

2007-09-01  Rob Buis  <buis@kde.org>

        Reviewed by Darin.

        Testcase for:
        http://bugs.webkit.org/show_bug.cgi?id=12988
        First element (in document order) is not returned when other duplicate ID-ed elements were created first

        * fast/dom/duplicate-ids-document-order-expected.txt: Added.
        * fast/dom/duplicate-ids-document-order.html: Added.

2007-08-31  Alice Liu  <alice.liu@apple.com>

        Reviewed by Tim Hatcher.

        Test for <rdar://problem/5420682> Mail crashes at WebCore::InsertLineBreakCommand::doApply() after dropping a selected image over container's close box

        * editing/deleting/deletionUI-single-instance.html: Added.
        * platform/mac/editing/deleting/deletionUI-single-instance-expected.checksum: Added.
        * platform/mac/editing/deleting/deletionUI-single-instance-expected.png: Added.
        * platform/mac/editing/deleting/deletionUI-single-instance-expected.txt: Added.

2007-08-30  Adele Peterson  <adele@apple.com>

        Reviewed by Justin.

        Test for <rdar://problem/5450600> REGRESSION: can't paste in textfield if its in a body that has user-select:none set (affects widgets)

        * editing/pasteboard/paste-plaintext-user-select-none-expected.txt: Added.
        * editing/pasteboard/paste-plaintext-user-select-none.html: Added.
        * fast/forms/textarea-paste-newline.html: Updated to escape '\n' in failure description.
