@@ -168,7 +168,6 @@ void InsertParagraphSeparatorCommand::doApply()
     // Handle case when position is in the first visible position in its block, and
     // similar case where previous position is in another, presumeably nested, block.
     if (isFirstInBlock || !inSameBlock(visiblePos, visiblePos.previous())) {
-        pos = pos.downstream();
         Node *refNode;
         if (isFirstInBlock && !nestNewBlock)
             refNode = startBlock;
@@ -178,6 +177,9 @@ void InsertParagraphSeparatorCommand::doApply()
         } else
             refNode = pos.node();
 
+        // find ending selection position easily before inserting the paragraph
+        pos = pos.downstream();
+        
         insertNodeBefore(blockToInsert.get(), refNode);
         appendBlockPlaceholder(blockToInsert.get());
         setEndingSelection(Selection(Position(blockToInsert.get(), 0), DOWNSTREAM));
